--- a/templates/cekpembayaran.html
+++ b/templates/cekpembayaran.html
@@ -184,34 +184,47 @@
     <div class="container">
         <div class="col">
             {% if is_admin %}
-                {% for pembayaran in pembayaran_info %}
-                <div class="row" id="card">
-                    <div class="d-flex">
-                        <h5>Pembayaran Akses Course (Lifetime)<span class="badge rounded-pill text-bg-warning"
-                                id="badge">Pending</span></h5>
-                    </div>
-                    <p>User : {{pembayaran_info.user}}</p>
-                    <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran"
-                        class="rounded mx-auto d-block">
-                    <div class="d-flex justify-content-end">
-                        <button type="button" class="btn btn-primary" id="submit">Acept</button>
-                        <button type="button" class="btn btn-primary" id="submit">Deny</button>
-                    </div>
+            {% for pembayaran in pembayaran_info %}
+            <div class="row" id="card">
+                <div class="d-flex">
+                    <h5>Pembayaran Akses Course (Lifetime)
+                        {% if not is_member %} <span class="badge rounded-pill text-bg-warning"
+                            id="badge">Pending</span></h5>{% endif %}
+                    {% if is_member %} <span class="badge rounded-pill text-bg-warning" id="badge">www</span></h5>{%
+                    endif %}
+
                 </div>
-                {% endfor %}
+                <p>User : {{pembayaran_info.user}}</p>
+                <img src="/static/bg-navbar.jpg" alt="Bukti Pembayaran" id="bukti-pembayaran"
+                    class="rounded mx-auto d-block">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-primary" id="submit">Acept</button>
+                    <button type="button" class="btn btn-primary" id="submit">Deny</button>
+                </div>
+            </div>
+            {% endfor %}
             {% endif %}
             {% if not is_admin %}
             <div class="row" id="card">
                 <div class="d-flex">
-                    <h5>Akses Course (Lifetime) <span class="badge rounded-pill text-bg-warning"
-                            id="badge">Pending</span></h5>
+                    <h5>Akses Course (Lifetime)
+                        {% if not is_member %} <span class="badge rounded-pill text-bg-warning"
+                            id="badge">Pending</span></h5>{% endif %}
+                    {% if is_member %} <span class="badge rounded-pill text-bg-success" id="badge">Success</span></h5>{%
+                    endif %}
+                    </h5>
                 </div>
+                {% if not is_member %} 
                 <p id="pembayaran">Total Pembayaran : Rp. 100.000</p>
                 <div class="d-flex justify-content-end">
                     <label for="formFile" class="form-label"></label>
                     <input class="form-control" type="file" id="imagesubmit">
                     <button type="button" class="btn btn-primary" id="submit" onclick="pembayaran()">Submit</button>
                 </div>
+                {% endif %}
+                {% if is_member %} 
+                <p> Selamat pembayaran anda telah disetujui, anda sekarang dapat mengakses seluruh course yang ada di SkillHub</p>
+                {% endif %}
             </div>
             {% endif %}
         </div>
